--- a/ui.html
+++ b/ui.html
@@ -156,7 +156,7 @@
     }
     .preview-actions {
       position: absolute;
-      bottom: 10px;
+      top: 10px;
       right: 10px;
       display: flex;
       gap: 8px;
@@ -916,6 +916,17 @@
           <span id="batchSection-icon">+</span>
         </div>
         <div id="batchSection" class="collapsible-content">
+          <!-- Simple Batch -->
+          <div style="margin-bottom:12px;padding-bottom:12px;border-bottom:1px solid var(--border)">
+            <label style="font-size:0.85rem;color:var(--text-dim)">Simple Batch (randomize [] variables)</label>
+            <div style="display:flex;gap:8px;margin-top:6px">
+              <input type="number" id="simpleBatchCount" value="10" min="1" max="100" style="width:70px">
+              <button id="simpleBatchBtn" class="btn-primary" onclick="generateSimpleBatch()" style="flex:1">Generate X Images</button>
+            </div>
+            <button id="simpleBatchCancelBtn" class="btn-danger" onclick="cancelSimpleBatch()" style="width:100%;margin-top:8px;display:none">Cancel</button>
+          </div>
+          <!-- JSON Batch -->
+          <label style="font-size:0.85rem;color:var(--text-dim)">JSON Batch (use {"{"}variables{"}"} from data)</label>
           <textarea id="batchJson" placeholder='[
   {"name": "Character1", "outfit": "Red dress"},
   {"name": "Character2", "outfit": "Blue suit"}
@@ -1023,17 +1034,25 @@ Results:
         <tr><td><code>[color]</code></td><td>red, emerald, navy, gold, lavender, etc.</td></tr>
         <tr><td><code>[size]</code></td><td>small, medium, large</td></tr>
         <tr><td><code>[pose]</code></td><td>standing, sitting, dancing, kneeling, etc.</td></tr>
+        <tr><td><code>[object]</code></td><td>chair, bed, table, stairs, swing, etc.</td></tr>
+        <tr><td><code>[race]</code></td><td>caucasian, african, asian, latino, etc.</td></tr>
+        <tr><td><code>[expression]</code></td><td>smiling, serious, laughing, seductive, etc.</td></tr>
       </table>
 
+      <h4>Number Ranges <code>[N-M]</code></h4>
+      <p>Random integer between N and M (inclusive):</p>
+      <pre>"[race] woman, [20-35] years old, [expression]"
+→ "asian woman, 27 years old, smiling"</pre>
+
       <h4>Examples</h4>
-      <pre>"{name} [pose] in the [location] [time]"
-→ "Alice dancing in the beach at sunset"
+      <pre>"{name} [pose] on [object] in [location], [expression]"
+→ "Alice sitting on chair in coffee shop, laughing"
 
-"{name} wearing a [size] [color] dress, [pose]"
-→ "Alice wearing a small red dress, sitting"
+"[race] woman, [expression], wearing [size] [color] dress"
+→ "nordic woman, seductive, wearing small red dress"
 
-"{name} and {name+1} [pose] in [location], [mood] [lighting]"
-→ "Alice and Bob walking in forest, romantic golden hour glow"</pre>
+"{name} [pose] on [object], [expression], [mood] [lighting]"
+→ "Alice leaning on railing, thoughtful, romantic golden hour glow"</pre>
     </div>
   </div>
 
@@ -1055,6 +1074,7 @@ Results:
     let currentImageIndex = 0;
     let currentFolder = 'all'; // Current gallery folder filter
     let batchCancelled = false; // Flag to cancel batch generation
+    let simpleBatchCancelled = false; // Flag to cancel simple batch
     let currentPage = 0; // Current gallery page
     let galleryObserver = null; // IntersectionObserver for lazy loading
 
@@ -1565,11 +1585,8 @@ Results:
 
       if (prompt) {
         // Use the already-resolved prompt with highlighting (don't regenerate random values!)
-        if (variables) {
-          promptHtml = `<div class="preview-prompt">${highlightStoredPrompt(prompt, variables, batchData, batchIndex)}</div>`;
-        } else {
-          promptHtml = `<div class="preview-prompt">${escapeHtml(prompt)}</div>`;
-        }
+        // Always call highlightStoredPrompt to highlight builtin [] variables even without JSON variables
+        promptHtml = `<div class="preview-prompt">${highlightStoredPrompt(prompt, variables || {}, batchData, batchIndex)}</div>`;
       }
 
       container.innerHTML = `
@@ -1918,14 +1935,10 @@ Results:
 
       // Update prompt display with highlighting
       const modalPromptEl = document.getElementById('modalPrompt');
-      const variables = img.settings?._variables;
+      const variables = img.settings?._variables || {};
       if (img.settings?.prompt) {
-        if (variables) {
-          // Show highlighted prompt - reconstruct what we can
-          modalPromptEl.innerHTML = highlightStoredPrompt(img.settings.prompt, variables);
-        } else {
-          modalPromptEl.textContent = img.settings.prompt;
-        }
+        // Always highlight - will catch builtin [] variables even without JSON variables
+        modalPromptEl.innerHTML = highlightStoredPrompt(img.settings.prompt, variables);
       } else {
         modalPromptEl.innerHTML = '';
       }
@@ -2364,6 +2377,34 @@ with open("image.png", "wb") as f:
         'walking', 'running', 'jumping', 'dancing', 'leaning',
         'stretching', 'reaching', 'pointing', 'waving', 'crossing arms',
         'hands on hips', 'bending over', 'squatting', 'lounging'
+      ],
+      object: [
+        'chair', 'stool', 'bench', 'sofa', 'armchair', 'throne',
+        'bed', 'mattress', 'pillow', 'blanket',
+        'table', 'desk', 'counter', 'bar',
+        'floor', 'carpet', 'rug',
+        'stairs', 'ladder', 'railing', 'balcony',
+        'window sill', 'doorway', 'wall', 'column', 'pillar',
+        'rock', 'tree stump', 'log', 'swing', 'hammock',
+        'car hood', 'motorcycle', 'bicycle', 'boat',
+        'pool edge', 'fountain', 'bathtub', 'shower'
+      ],
+      race: [
+        'caucasian', 'african', 'asian', 'latino', 'hispanic',
+        'middle eastern', 'indian', 'polynesian', 'native american',
+        'mediterranean', 'nordic', 'slavic', 'southeast asian', 'east asian',
+        'mixed race', 'biracial'
+      ],
+      expression: [
+        'smiling', 'laughing', 'grinning', 'giggling',
+        'serious', 'stern', 'stoic', 'neutral',
+        'sad', 'crying', 'tearful', 'melancholic',
+        'angry', 'furious', 'annoyed', 'frowning',
+        'surprised', 'shocked', 'amazed', 'wide-eyed',
+        'seductive', 'flirty', 'sultry', 'playful',
+        'thoughtful', 'pensive', 'contemplative', 'dreamy',
+        'scared', 'terrified', 'worried', 'anxious',
+        'disgusted', 'confused', 'skeptical', 'bored'
       ]
     };
 
@@ -2374,8 +2415,16 @@ with open("image.png", "wb") as f:
     }
 
     function interpolatePrompt(template, variables, batchData = null, currentIndex = 0) {
-      // First, replace built-in random variables [location], [time], etc.
-      let result = template.replace(/\[(\w+)\]/g, (match, key) => {
+      // First, replace number range variables [N-M] like [30-40]
+      let result = template.replace(/\[(\d+)-(\d+)\]/g, (match, min, max) => {
+        const minNum = parseInt(min, 10);
+        const maxNum = parseInt(max, 10);
+        if (minNum > maxNum) return match; // Invalid range
+        return Math.floor(Math.random() * (maxNum - minNum + 1)) + minNum;
+      });
+
+      // Then, replace built-in random variables [location], [time], etc.
+      result = result.replace(/\[(\w+)\]/g, (match, key) => {
         const value = getRandomBuiltin(key);
         return value !== null ? value : match;
       });
@@ -2552,6 +2601,122 @@ with open("image.png", "wb") as f:
     function cancelBatch() {
       batchCancelled = true;
       document.getElementById('batchCancelBtn').textContent = 'Cancelling...';
+    }
+
+    // Simple batch generation (no JSON, just repeat with random [] variables)
+    async function generateSimpleBatch() {
+      const promptTemplate = document.getElementById('prompt').value.trim();
+      if (!promptTemplate) {
+        showStatus('Please enter a prompt', 'error');
+        return;
+      }
+
+      // Check for {variable} - not allowed in simple batch
+      if (/\{(\w+)([+-]\d+)?\}/.test(promptTemplate)) {
+        showStatus('{variables} require JSON batch mode. Use [] for random values.', 'error');
+        return;
+      }
+
+      const count = parseInt(document.getElementById('simpleBatchCount').value) || 10;
+      if (count < 1 || count > 100) {
+        showStatus('Count must be between 1 and 100', 'error');
+        return;
+      }
+
+      // Create folder name
+      const folderName = `Simple ${new Date().toLocaleString()}`;
+
+      const btn = document.getElementById('simpleBatchBtn');
+      const cancelBtn = document.getElementById('simpleBatchCancelBtn');
+      const progressEl = document.getElementById('batchProgress');
+      const progressFill = document.getElementById('batchProgressFill');
+      const progressText = document.getElementById('batchProgressText');
+      const batchPromptEl = document.getElementById('batchPrompt');
+
+      btn.style.display = 'none';
+      cancelBtn.style.display = 'block';
+      progressEl.style.display = 'block';
+      simpleBatchCancelled = false;
+
+      let completed = 0;
+
+      for (let i = 0; i < count; i++) {
+        if (simpleBatchCancelled) {
+          showStatus(`Batch cancelled after ${completed} images`, 'error');
+          break;
+        }
+
+        // Interpolate with fresh random values for each image
+        const prompt = interpolatePrompt(promptTemplate, {});
+        const negativeTemplate = document.getElementById('negativePrompt').value;
+        const negativePrompt = interpolatePrompt(negativeTemplate, {});
+
+        progressText.textContent = `${i + 1} / ${count}`;
+        progressFill.style.width = `${(i / count) * 100}%`;
+        batchPromptEl.textContent = prompt;
+
+        const settings = getSettings();
+        settings.prompt = prompt;
+        if (negativePrompt && negativePrompt.trim()) {
+          settings.negative_prompt = negativePrompt;
+        }
+
+        const url = `${getApiUrl()}/generate/${getModel()}`;
+
+        try {
+          const response = await fetch(url, {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify(settings)
+          });
+
+          if (!response.ok) {
+            const error = await response.json();
+            throw new Error(error.detail || error.error || 'Generation failed');
+          }
+
+          const blob = await response.blob();
+
+          // Save with folder
+          await saveImage(blob, settings, folderName);
+          completed++;
+
+          // Update progress
+          progressFill.style.width = `${((i + 1) / count) * 100}%`;
+
+          // Show preview
+          const imgUrl = URL.createObjectURL(blob);
+          showPreview(imgUrl, null, prompt);
+
+          // Debounce between generations
+          if (i < count - 1) {
+            await new Promise(r => setTimeout(r, 1000));
+          }
+
+        } catch (error) {
+          console.error(`Failed to generate image ${i + 1}:`, error);
+          showStatus(`Error on image ${i + 1}: ${error.message}`, 'error');
+        }
+      }
+
+      btn.style.display = 'block';
+      cancelBtn.style.display = 'none';
+      cancelBtn.textContent = 'Cancel';
+      progressEl.style.display = 'none';
+      batchPromptEl.textContent = '';
+
+      if (!simpleBatchCancelled) {
+        showStatus(`Batch complete: ${completed}/${count} images`, 'success');
+      }
+
+      await loadGallery();
+      currentFolder = folderName;
+      await loadGallery();
+    }
+
+    function cancelSimpleBatch() {
+      simpleBatchCancelled = true;
+      document.getElementById('simpleBatchCancelBtn').textContent = 'Cancelling...';
     }
 
     // Initialize on load
