feat: Expand location, action, and expression options for enhanced prompt generation

--- a/ui.html
+++ b/ui.html
@@ -2336,14 +2336,14 @@ with open("image.png", "wb") as f:
         'beach', 'tropical island', 'lakeside', 'riverbank', 'waterfall',
         'forest', 'jungle', 'mountain peak', 'desert dunes', 'snowy wilderness',
         'film studio', 'art gallery', 'library', 'coffee shop', 'nightclub',
-        'castle hall', 'space station', 'underwater ruins', 'neon-lit arcade', 'zen garden'
+        'castle hall', 'space station', 'underwater ruins', 'neon-lit arcade', 'zen garden', 'slave market', 'strip club', 'brothel', 'back alley', 'arena', 'carnival', 'slum district', 'industrial factory', 'abandoned warehouse', 'school', 'university campus', 'hospital room', 'laboratory', 'labor camp', 'landfill site', 'junkyard', 'construction site', 'docks', 'ship deck', 'train yard', 'airport hangar'
       ],
       time: [
         'at dawn', 'at sunrise', 'in the early morning', 'in the morning light',
         'at midday', 'in the afternoon', 'in the golden hour', 'at sunset',
         'at dusk', 'at twilight', 'in the evening', 'at night',
         'at midnight', 'under moonlight', 'during blue hour', 'in the fog',
-        'during a thunderstorm', 'in the rain', 'during snowfall', 'on a cloudy day'
+        'during a thunderstorm', 'in the rain', 'during snowfall'
       ],
       weather: [
         'sunny', 'cloudy', 'overcast', 'rainy', 'stormy',
@@ -2376,7 +2376,7 @@ with open("image.png", "wb") as f:
         'standing', 'sitting', 'kneeling', 'lying down', 'crouching',
         'walking', 'running', 'jumping', 'dancing', 'leaning',
         'stretching', 'reaching', 'pointing', 'waving', 'crossing arms',
-        'hands on hips', 'bending over', 'squatting', 'lounging'
+        'hands on hips', 'bending over', 'squatting', 'lounging', 'spreading legs', 'touching herself', 'holding hair', 'biting lip', 'arching back', 'aiming', 'saluting', 'praying', 'meditating', 'tied up', 'bound wrists', 'hogtied', 'spread eagle', 'on all fours', 'doggy style', 'whipped', 'suspended', 'leashed', 'collared', 'gagged', 'chastised', 'spanked', 'flogged', 'interrogated'
       ],
       object: [
         'chair', 'stool', 'bench', 'sofa', 'armchair', 'throne',
@@ -2387,13 +2387,13 @@ with open("image.png", "wb") as f:
         'window sill', 'doorway', 'wall', 'column', 'pillar',
         'rock', 'tree stump', 'log', 'swing', 'hammock',
         'car hood', 'motorcycle', 'bicycle', 'boat',
-        'pool edge', 'fountain', 'bathtub', 'shower'
+        'pool edge', 'fountain', 'bathtub', 'shower', 'St. Andrew\'s cross', 'pillory', 'cage', 'stocks', 'cross', 'altar', 'dungeon bench', 'torture rack', 'whipping post', 'examination table', 'operating table', 'gynecological chair', 'spank bench', 'bondage table', 'humiliation stool', 'flogging bench', 'restraint bed', 'slave block', 'pillory stand', 'bondage frame', 'cat o\' nine tails', 'crop', 'paddle', 'butt plug', 'dildo', 'vibrator', 'anal beads', 'nipple clamps', 'ball gag', 'blindfold', 'collar and leash', 'spreaders', 'chastity belt', 'shackles', 'manacles', 'chains', 'shibari ropes'
       ],
       race: [
         'caucasian', 'african', 'asian', 'latino', 'hispanic',
         'middle eastern', 'indian', 'polynesian', 'native american',
         'mediterranean', 'nordic', 'slavic', 'southeast asian', 'east asian',
-        'mixed race', 'biracial'
+        'mixed race', 'biracial', 'black african', 'arab', 'persian', 'maori', 'pacific islander', 'caribbean', 'afro-latino'
       ],
       expression: [
         'smiling', 'laughing', 'grinning', 'giggling',
@@ -2404,7 +2404,7 @@ with open("image.png", "wb") as f:
         'seductive', 'flirty', 'sultry', 'playful',
         'thoughtful', 'pensive', 'contemplative', 'dreamy',
         'scared', 'terrified', 'worried', 'anxious',
-        'disgusted', 'confused', 'skeptical', 'bored'
+        'disgusted', 'confused', 'skeptical', 'bored', 'curious', 'determined', 'relaxed', 'content', 'excited', 'nervous', 'shy', 'proud', 'embarrassed', 'teasing', 'mischievous', 'smeared lipstick', 'running makeup', 'smudged makeup', 'dilated pupils', 'biting lip', 'tongue out', 'blushing', 'wide smile', 'raised eyebrow'
       ]
     };
 
