--- a/ui.html
+++ b/ui.html
@@ -910,29 +910,51 @@
         </div>
       </div>
 
+      <!-- Simple Batch -->
       <div class="batch-section">
-        <div class="collapsible-header" onclick="toggleCollapsible('batchSection')">
-          <label style="margin:0;cursor:pointer">Batch Mode <span class="help-icon" onclick="event.stopPropagation(); showVariablesHelp()">?</span></label>
-          <span id="batchSection-icon">+</span>
+        <div class="collapsible-header" onclick="toggleCollapsible('simpleBatchSection')">
+          <label style="margin:0;cursor:pointer">Simple Batch <span class="help-icon" onclick="event.stopPropagation(); showVariablesHelp()">?</span></label>
+          <span id="simpleBatchSection-icon">+</span>
         </div>
-        <div id="batchSection" class="collapsible-content">
-          <!-- Simple Batch -->
-          <div style="margin-bottom:12px;padding-bottom:12px;border-bottom:1px solid var(--border)">
-            <label style="font-size:0.85rem;color:var(--text-dim)">Simple Batch (randomize [] variables)</label>
-            <div style="display:flex;gap:8px;margin-top:6px">
-              <input type="number" id="simpleBatchCount" value="10" min="1" max="100" style="width:70px">
-              <button id="simpleBatchBtn" class="btn-primary" onclick="generateSimpleBatch()" style="flex:1">Generate X Images</button>
-            </div>
-            <button id="simpleBatchCancelBtn" class="btn-danger" onclick="cancelSimpleBatch()" style="width:100%;margin-top:8px;display:none">Cancel</button>
+        <div id="simpleBatchSection" class="collapsible-content">
+          <p style="font-size:0.8rem;color:var(--text-dim);margin:0 0 8px">Generate X images with randomized [] variables</p>
+          <div style="display:flex;gap:8px;align-items:center">
+            <input type="number" id="simpleBatchCount" value="10" min="1" max="100" style="width:70px">
+            <button id="simpleBatchBtn" class="btn-primary" onclick="generateSimpleBatch()" style="flex:1">Generate</button>
           </div>
-          <!-- JSON Batch -->
-          <label style="font-size:0.85rem;color:var(--text-dim)">JSON Batch (use {"{"}variables{"}"} from data)</label>
+          <button id="simpleBatchCancelBtn" class="btn-danger" onclick="cancelSimpleBatch()" style="width:100%;margin-top:8px;display:none">Cancel</button>
+          <div id="simpleBatchProgress" class="batch-progress" style="display:none">
+            <div class="batch-progress-bar">
+              <div class="batch-progress-fill" id="simpleBatchProgressFill" style="width:0%"></div>
+            </div>
+            <div class="batch-progress-text" id="simpleBatchProgressText">0 / 0</div>
+            <div class="batch-prompt" id="simpleBatchPrompt"></div>
+          </div>
+        </div>
+      </div>
+
+      <!-- JSON Batch -->
+      <div class="batch-section">
+        <div class="collapsible-header" onclick="toggleCollapsible('jsonBatchSection')">
+          <label style="margin:0;cursor:pointer">JSON Batch <span class="help-icon" onclick="event.stopPropagation(); showVariablesHelp()">?</span></label>
+          <span id="jsonBatchSection-icon">+</span>
+        </div>
+        <div id="jsonBatchSection" class="collapsible-content">
+          <p style="font-size:0.8rem;color:var(--text-dim);margin:0 0 8px">Use {"{"}variables{"}"} from JSON data</p>
           <textarea id="batchJson" placeholder='[
   {"name": "Character1", "outfit": "Red dress"},
   {"name": "Character2", "outfit": "Blue suit"}
 ]'></textarea>
           <div id="jsonError" class="json-error"></div>
           <div id="jsonValid" class="json-valid"></div>
+          <div style="display:flex;gap:8px;align-items:stretch;margin-top:8px">
+            <button id="batchGenerateBtn" class="btn-primary" onclick="generateBatch()" style="flex:1">Generate Batch</button>
+            <label style="display:flex;align-items:center;gap:4px;font-size:0.75rem;cursor:pointer;white-space:nowrap;padding:0 4px">
+              <input type="checkbox" id="batchRandomize" onchange="saveBatchRandomize()" style="margin:0">
+              Shuffle
+            </label>
+          </div>
+          <button id="batchCancelBtn" class="btn-danger" onclick="cancelBatch()" style="width:100%;margin-top:8px;display:none">Cancel</button>
           <div id="batchProgress" class="batch-progress" style="display:none">
             <div class="batch-progress-bar">
               <div class="batch-progress-fill" id="batchProgressFill" style="width:0%"></div>
@@ -941,8 +963,6 @@
             <div class="batch-names" id="batchNames"></div>
             <div class="batch-prompt" id="batchPrompt"></div>
           </div>
-          <button id="batchGenerateBtn" class="btn-primary" onclick="generateBatch()" style="width:100%">Generate Batch</button>
-          <button id="batchCancelBtn" class="btn-danger" onclick="cancelBatch()" style="width:100%;margin-top:8px;display:none">Cancel Batch</button>
         </div>
       </div>
     </div>
@@ -1087,6 +1107,7 @@ Results:
       loadSavedSettings();
       loadHistory();
       loadNegHistory();
+      loadBatchRandomize();
       await loadGallery();
       setupEventListeners();
     }
@@ -2493,11 +2514,37 @@ with open("image.png", "wb") as f:
       return result;
     }
 
+    // Fisher-Yates shuffle
+    function shuffleArray(array) {
+      const arr = [...array]; // copy
+      for (let i = arr.length - 1; i > 0; i--) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [arr[i], arr[j]] = [arr[j], arr[i]];
+      }
+      return arr;
+    }
+
+    function saveBatchRandomize() {
+      localStorage.setItem('sillyMediaBatchRandomize', document.getElementById('batchRandomize').checked);
+    }
+
+    function loadBatchRandomize() {
+      const saved = localStorage.getItem('sillyMediaBatchRandomize');
+      if (saved !== null) {
+        document.getElementById('batchRandomize').checked = saved === 'true';
+      }
+    }
+
     async function generateBatch() {
-      const batchData = validateBatchJson();
+      let batchData = validateBatchJson();
       if (!batchData) {
         showStatus('Please enter valid JSON', 'error');
         return;
+      }
+
+      // Randomize order if checkbox is checked
+      if (document.getElementById('batchRandomize').checked) {
+        batchData = shuffleArray(batchData);
       }
 
       const promptTemplate = document.getElementById('prompt').value.trim();
@@ -2674,10 +2721,10 @@ with open("image.png", "wb") as f:
 
       const btn = document.getElementById('simpleBatchBtn');
       const cancelBtn = document.getElementById('simpleBatchCancelBtn');
-      const progressEl = document.getElementById('batchProgress');
-      const progressFill = document.getElementById('batchProgressFill');
-      const progressText = document.getElementById('batchProgressText');
-      const batchPromptEl = document.getElementById('batchPrompt');
+      const progressEl = document.getElementById('simpleBatchProgress');
+      const progressFill = document.getElementById('simpleBatchProgressFill');
+      const progressText = document.getElementById('simpleBatchProgressText');
+      const batchPromptEl = document.getElementById('simpleBatchPrompt');
 
       btn.style.display = 'none';
       cancelBtn.style.display = 'block';
